--- a/Example/OhmageOMHSDK/Base.lproj/Main.storyboard
+++ b/Example/OhmageOMHSDK/Base.lproj/Main.storyboard
@@ -85,21 +85,21 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qCH-U6-QSz">
-                                <rect key="frame" x="164" y="66" width="47" height="30"/>
+                                <rect key="frame" x="164" y="60" width="47" height="30"/>
                                 <state key="normal" title="Sign In"/>
                                 <connections>
                                     <action selector="signInAction:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="CSR-fJ-U5K"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ag7-cE-Fhu">
-                                <rect key="frame" x="145" y="246" width="85" height="30"/>
+                                <rect key="frame" x="145" y="200" width="85" height="30"/>
                                 <state key="normal" title="Upload PAM"/>
                                 <connections>
                                     <action selector="uploadPAMAction:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="ncw-Zo-os1"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5uA-cF-1np">
-                                <rect key="frame" x="158" y="156" width="60" height="30"/>
+                                <rect key="frame" x="158" y="130" width="60" height="30"/>
                                 <state key="normal" title="Sign Out"/>
                                 <connections>
                                     <action selector="signOutAction:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="NON-kE-Eio"/>
@@ -112,44 +112,53 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nPW-rM-nUg">
-                                <rect key="frame" x="142" y="426" width="92" height="30"/>
+                                <rect key="frame" x="142" y="410" width="92" height="30"/>
                                 <state key="normal" title="Force Upload"/>
                                 <connections>
                                     <action selector="forceUploadAction:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Xzt-c3-e6g"/>
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="V3A-uq-yF4">
-                                <rect key="frame" x="0.0" y="464" width="375" height="105"/>
+                                <rect key="frame" x="0.0" y="448" width="375" height="121"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3og-3j-PLU">
-                                <rect key="frame" x="140" y="336" width="95" height="30"/>
+                                <rect key="frame" x="140" y="270" width="95" height="30"/>
                                 <state key="normal" title="Upload Image"/>
                                 <connections>
                                     <action selector="uploadImageAction:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="FCX-sc-fNg"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2eW-iA-3iz">
+                                <rect key="frame" x="132" y="340" width="111" height="30"/>
+                                <state key="normal" title="Upload Consent"/>
+                                <connections>
+                                    <action selector="uploadConsentAction:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="gvF-NQ-FcT"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="ifO-cX-fEk" secondAttribute="bottom" constant="20" id="0lU-Qx-qmb"/>
-                            <constraint firstItem="nPW-rM-nUg" firstAttribute="top" secondItem="3og-3j-PLU" secondAttribute="bottom" constant="60" id="5EE-Vz-6C0"/>
-                            <constraint firstItem="5uA-cF-1np" firstAttribute="top" secondItem="qCH-U6-QSz" secondAttribute="bottom" constant="60" id="A6j-OE-Rf2"/>
+                            <constraint firstItem="2eW-iA-3iz" firstAttribute="top" secondItem="3og-3j-PLU" secondAttribute="bottom" constant="40" id="1vX-Fr-q7N"/>
+                            <constraint firstItem="5uA-cF-1np" firstAttribute="top" secondItem="qCH-U6-QSz" secondAttribute="bottom" constant="40" id="A6j-OE-Rf2"/>
                             <constraint firstItem="ag7-cE-Fhu" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="BZj-v1-tjL"/>
                             <constraint firstItem="5uA-cF-1np" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="MUL-DW-q09"/>
                             <constraint firstItem="ifO-cX-fEk" firstAttribute="top" secondItem="V3A-uq-yF4" secondAttribute="bottom" constant="8" id="Nu9-Cd-4dT"/>
                             <constraint firstItem="V3A-uq-yF4" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="PL3-xc-sb5"/>
+                            <constraint firstItem="nPW-rM-nUg" firstAttribute="top" secondItem="2eW-iA-3iz" secondAttribute="bottom" constant="40" id="Ptx-Sy-HV8"/>
                             <constraint firstItem="3og-3j-PLU" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="TOv-kD-f15"/>
-                            <constraint firstItem="3og-3j-PLU" firstAttribute="top" secondItem="ag7-cE-Fhu" secondAttribute="bottom" constant="60" id="Yhd-iJ-XAb"/>
-                            <constraint firstItem="qCH-U6-QSz" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="46" id="fh7-aR-7tA"/>
+                            <constraint firstItem="3og-3j-PLU" firstAttribute="top" secondItem="ag7-cE-Fhu" secondAttribute="bottom" constant="40" id="Yhd-iJ-XAb"/>
+                            <constraint firstItem="qCH-U6-QSz" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="40" id="fh7-aR-7tA"/>
                             <constraint firstItem="V3A-uq-yF4" firstAttribute="width" secondItem="kh9-bI-dsS" secondAttribute="width" id="hs6-h8-6ae"/>
                             <constraint firstItem="qCH-U6-QSz" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="jVT-yh-rsN"/>
                             <constraint firstItem="ifO-cX-fEk" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="liU-km-LHj"/>
                             <constraint firstItem="nPW-rM-nUg" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="lyg-ql-qCf"/>
-                            <constraint firstItem="ag7-cE-Fhu" firstAttribute="top" secondItem="5uA-cF-1np" secondAttribute="bottom" constant="60" id="rIk-XE-znb"/>
+                            <constraint firstItem="ag7-cE-Fhu" firstAttribute="top" secondItem="5uA-cF-1np" secondAttribute="bottom" constant="40" id="rIk-XE-znb"/>
+                            <constraint firstItem="2eW-iA-3iz" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="rW8-q3-Xi3"/>
                             <constraint firstItem="V3A-uq-yF4" firstAttribute="top" secondItem="nPW-rM-nUg" secondAttribute="bottom" constant="8" id="zgk-rP-JAh"/>
                         </constraints>
                     </view>
